// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tests for InstallTabs component > renders correctly 1`] = `
<div>
  <div
    class="install"
  >
    <div
      class="react-tabs"
      data-rttabs="true"
    >
      <div
        class="install__header"
      >
        <div
          class="install__header-circles"
        >
          <div
            class="install__header-grey-circle red"
          />
          <div
            class="install__header-grey-circle yellow"
          />
          <div
            class="install__header-grey-circle green"
          />
        </div>
        <div
          class="install__header-text"
        >
          bash
        </div>
      </div>
      <ul
        class="react-tabs__tab-list"
        role="tablist"
      >
        <li
          aria-controls="panel_r_0_0"
          aria-disabled="false"
          aria-selected="true"
          class="react-tabs__tab react-tabs__tab--selected"
          data-rttab="true"
          id="tab_r_0_0"
          role="tab"
          tabindex="0"
        >
          Windows (Winget)
        </li>
        <li
          aria-controls="panel_r_0_1"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="tab_r_0_1"
          role="tab"
        >
          macOS (Homebrew)
        </li>
        <li
          aria-controls="panel_r_0_2"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="tab_r_0_2"
          role="tab"
        >
          Linux (RPM/DEB)
        </li>
      </ul>
      <div
        aria-labelledby="tab_r_0_0"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="panel_r_0_0"
        role="tabpanel"
      >
        <div>
          <pre
            class="shell-box no-highlight"
          >
            <div
              class="shell-box-top"
            />
            <code
              class="shell-box-code"
            >
              <span
                class="install__text__no-select"
              >
                # Install the latest version
              </span>
              <br />
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install-text-command"
              >
                winget install 
              </span>
              EclipseAdoptium.Temurin.
              21
              .JDK
            </code>
          </pre>
          <br />
          <pre
            class="shell-box no-highlight"
          >
            <div
              class="shell-box-top"
            />
            <code
              class="shell-box-code"
            >
              <span
                class="install__text__no-select"
              >
                # Install a different version
              </span>
              <br />
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install-text-command"
              >
                winget install 
              </span>
              EclipseAdoptium.Temurin.11.JDK
            </code>
          </pre>
          <br />
          <pre
            class="shell-box no-highlight"
          >
            <div
              class="shell-box-top"
            />
            <code
              class="shell-box-code"
            >
              <span
                class="install__text__no-select"
              >
                # Upgrade the Winget package
              </span>
              <br />
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install-text-command"
              >
                winget upgrade 
              </span>
              EclipseAdoptium.Temurin.
              21
              .JDK
            </code>
          </pre>
          <br />
          <pre
            class="shell-box no-highlight"
          >
            <div
              class="shell-box-top"
            />
            <code
              class="shell-box-code"
            >
              <span
                class="install__text__no-select"
              >
                # Uninstall the Winget package
              </span>
              <br />
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install-text-command"
              >
                winget uninstall 
              </span>
              EclipseAdoptium.Temurin.
              21
              .JDK
            </code>
          </pre>
          <a
            class="install__docs-button"
            href="https://docs.microsoft.com/en-us/windows/package-manager/winget/"
          >
            Read documentation
          </a>
        </div>
      </div>
      <div
        aria-labelledby="tab_r_0_1"
        class="react-tabs__tab-panel"
        id="panel_r_0_1"
        role="tabpanel"
      />
      <div
        aria-labelledby="tab_r_0_2"
        class="react-tabs__tab-panel"
        id="panel_r_0_2"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`Tests for InstallTabs component > renders correctly for Linux 1`] = `
<div>
  <div
    class="install"
  >
    <div
      class="react-tabs"
      data-rttabs="true"
    >
      <div
        class="install__header"
      >
        <div
          class="install__header-circles"
        >
          <div
            class="install__header-grey-circle red"
          />
          <div
            class="install__header-grey-circle yellow"
          />
          <div
            class="install__header-grey-circle green"
          />
        </div>
        <div
          class="install__header-text"
        >
          bash
        </div>
      </div>
      <ul
        class="react-tabs__tab-list"
        role="tablist"
      >
        <li
          aria-controls="panel_r_2_0"
          aria-disabled="false"
          aria-selected="true"
          class="react-tabs__tab react-tabs__tab--selected"
          data-rttab="true"
          id="tab_r_2_0"
          role="tab"
          tabindex="0"
        >
          Linux (RPM/DEB)
        </li>
        <li
          aria-controls="panel_r_2_1"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="tab_r_2_1"
          role="tab"
        >
          macOS (Homebrew)
        </li>
        <li
          aria-controls="panel_r_2_2"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="tab_r_2_2"
          role="tab"
        >
          Windows (Winget)
        </li>
      </ul>
      <div
        aria-labelledby="tab_r_2_0"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="panel_r_2_0"
        role="tabpanel"
      >
        <div>
          <pre
            class="shell-box no-highlight"
          >
            <div
              class="shell-box-top"
            />
            <code
              class="shell-box-code"
            >
              <span
                class="install__text__no-select"
              >
                # Install the latest LTS version (Debian or Ubuntu)
              </span>
              <br />
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install-text-command"
              >
                apt-get install 
              </span>
              temurin-
              21
              -jdk
            </code>
          </pre>
          <br />
          <pre
            class="shell-box no-highlight"
          >
            <div
              class="shell-box-top"
            />
            <code
              class="shell-box-code"
            >
              <span
                class="install__text__no-select"
              >
                # Install the latest LTS version (CentOS/RHEL/Fedora)
              </span>
              <br />
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install-text-command"
              >
                yum install 
              </span>
              temurin-
              21
              -jdk
            </code>
          </pre>
          <br />
          <pre
            class="shell-box no-highlight"
          >
            <div
              class="shell-box-top"
            />
            <code
              class="shell-box-code"
            >
              <span
                class="install__text__no-select"
              >
                # Install the latest LTS version (openSUSE/SLES)
              </span>
              <br />
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install-text-command"
              >
                zypper install 
              </span>
              temurin-
              21
              -jdk
            </code>
          </pre>
          <a
            class="install__docs-button"
            href="/installation/linux"
          >
            Read documentation
          </a>
        </div>
      </div>
      <div
        aria-labelledby="tab_r_2_1"
        class="react-tabs__tab-panel"
        id="panel_r_2_1"
        role="tabpanel"
      />
      <div
        aria-labelledby="tab_r_2_2"
        class="react-tabs__tab-panel"
        id="panel_r_2_2"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`Tests for InstallTabs component > renders correctly for Unix 1`] = `
<div>
  <div
    class="install"
  >
    <div
      class="react-tabs"
      data-rttabs="true"
    >
      <div
        class="install__header"
      >
        <div
          class="install__header-circles"
        >
          <div
            class="install__header-grey-circle red"
          />
          <div
            class="install__header-grey-circle yellow"
          />
          <div
            class="install__header-grey-circle green"
          />
        </div>
        <div
          class="install__header-text"
        >
          bash
        </div>
      </div>
      <ul
        class="react-tabs__tab-list"
        role="tablist"
      >
        <li
          aria-controls="panel_r_3_0"
          aria-disabled="false"
          aria-selected="true"
          class="react-tabs__tab react-tabs__tab--selected"
          data-rttab="true"
          id="tab_r_3_0"
          role="tab"
          tabindex="0"
        >
          Linux (RPM/DEB)
        </li>
        <li
          aria-controls="panel_r_3_1"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="tab_r_3_1"
          role="tab"
        >
          macOS (Homebrew)
        </li>
        <li
          aria-controls="panel_r_3_2"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="tab_r_3_2"
          role="tab"
        >
          Windows (Winget)
        </li>
      </ul>
      <div
        aria-labelledby="tab_r_3_0"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="panel_r_3_0"
        role="tabpanel"
      >
        <div>
          <pre
            class="shell-box no-highlight"
          >
            <div
              class="shell-box-top"
            />
            <code
              class="shell-box-code"
            >
              <span
                class="install__text__no-select"
              >
                # Install the latest LTS version (Debian or Ubuntu)
              </span>
              <br />
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install-text-command"
              >
                apt-get install 
              </span>
              temurin-
              21
              -jdk
            </code>
          </pre>
          <br />
          <pre
            class="shell-box no-highlight"
          >
            <div
              class="shell-box-top"
            />
            <code
              class="shell-box-code"
            >
              <span
                class="install__text__no-select"
              >
                # Install the latest LTS version (CentOS/RHEL/Fedora)
              </span>
              <br />
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install-text-command"
              >
                yum install 
              </span>
              temurin-
              21
              -jdk
            </code>
          </pre>
          <br />
          <pre
            class="shell-box no-highlight"
          >
            <div
              class="shell-box-top"
            />
            <code
              class="shell-box-code"
            >
              <span
                class="install__text__no-select"
              >
                # Install the latest LTS version (openSUSE/SLES)
              </span>
              <br />
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install-text-command"
              >
                zypper install 
              </span>
              temurin-
              21
              -jdk
            </code>
          </pre>
          <a
            class="install__docs-button"
            href="/installation/linux"
          >
            Read documentation
          </a>
        </div>
      </div>
      <div
        aria-labelledby="tab_r_3_1"
        class="react-tabs__tab-panel"
        id="panel_r_3_1"
        role="tabpanel"
      />
      <div
        aria-labelledby="tab_r_3_2"
        class="react-tabs__tab-panel"
        id="panel_r_3_2"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`Tests for InstallTabs component > renders correctly for macOS 1`] = `
<div>
  <div
    class="install"
  >
    <div
      class="react-tabs"
      data-rttabs="true"
    >
      <div
        class="install__header"
      >
        <div
          class="install__header-circles"
        >
          <div
            class="install__header-grey-circle red"
          />
          <div
            class="install__header-grey-circle yellow"
          />
          <div
            class="install__header-grey-circle green"
          />
        </div>
        <div
          class="install__header-text"
        >
          zsh
        </div>
      </div>
      <ul
        class="react-tabs__tab-list"
        role="tablist"
      >
        <li
          aria-controls="panel_r_1_0"
          aria-disabled="false"
          aria-selected="true"
          class="react-tabs__tab react-tabs__tab--selected"
          data-rttab="true"
          id="tab_r_1_0"
          role="tab"
          tabindex="0"
        >
          macOS (Homebrew)
        </li>
        <li
          aria-controls="panel_r_1_1"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="tab_r_1_1"
          role="tab"
        >
          Windows (Winget)
        </li>
        <li
          aria-controls="panel_r_1_2"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="tab_r_1_2"
          role="tab"
        >
          Linux (RPM/DEB)
        </li>
      </ul>
      <div
        aria-labelledby="tab_r_1_0"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="panel_r_1_0"
        role="tabpanel"
      >
        <div>
          <pre
            class="shell-box no-highlight"
          >
            <div
              class="shell-box-top"
            />
            <code
              class="shell-box-code"
            >
              <span
                class="install__text__no-select"
              >
                # Install the latest LTS version
              </span>
              <br />
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install-text-command"
              >
                brew install --cask 
              </span>
              temurin@
              21
            </code>
          </pre>
          <br />
          <pre
            class="shell-box no-highlight"
          >
            <div
              class="shell-box-top"
            />
            <code
              class="shell-box-code"
            >
              <span
                class="install__text__no-select"
              >
                # Install a specific version
              </span>
              <br />
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install-text-command"
              >
                brew install --cask 
              </span>
              temurin@8
              <br />
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install-text-command"
              >
                brew install --cask 
              </span>
              temurin@
              21
            </code>
          </pre>
          <br />
          <br />
          <br />
          <pre
            class="shell-box no-highlight"
          >
            <div
              class="shell-box-top"
            />
            <code
              class="shell-box-code"
            >
              <span
                class="install__text__no-select"
              >
                # Uninstall a specific version
              </span>
              <br />
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install-text-command"
              >
                brew uninstall --cask 
              </span>
              temurin@
              21
            </code>
          </pre>
          <a
            class="install__docs-button"
            href="https://docs.brew.sh/Manpage"
          >
            Read documentation
          </a>
        </div>
      </div>
      <div
        aria-labelledby="tab_r_1_1"
        class="react-tabs__tab-panel"
        id="panel_r_1_1"
        role="tabpanel"
      />
      <div
        aria-labelledby="tab_r_1_2"
        class="react-tabs__tab-panel"
        id="panel_r_1_2"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;

exports[`Tests for InstallTabs component > renders correctly for other 1`] = `
<div>
  <div
    class="install"
  >
    <div
      class="react-tabs"
      data-rttabs="true"
    >
      <div
        class="install__header"
      >
        <div
          class="install__header-circles"
        >
          <div
            class="install__header-grey-circle red"
          />
          <div
            class="install__header-grey-circle yellow"
          />
          <div
            class="install__header-grey-circle green"
          />
        </div>
        <div
          class="install__header-text"
        >
          bash
        </div>
      </div>
      <ul
        class="react-tabs__tab-list"
        role="tablist"
      >
        <li
          aria-controls="panel_r_4_0"
          aria-disabled="false"
          aria-selected="true"
          class="react-tabs__tab react-tabs__tab--selected"
          data-rttab="true"
          id="tab_r_4_0"
          role="tab"
          tabindex="0"
        >
          Windows (Winget)
        </li>
        <li
          aria-controls="panel_r_4_1"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="tab_r_4_1"
          role="tab"
        >
          macOS (Homebrew)
        </li>
        <li
          aria-controls="panel_r_4_2"
          aria-disabled="false"
          aria-selected="false"
          class="react-tabs__tab"
          data-rttab="true"
          id="tab_r_4_2"
          role="tab"
        >
          Linux (RPM/DEB)
        </li>
      </ul>
      <div
        aria-labelledby="tab_r_4_0"
        class="react-tabs__tab-panel react-tabs__tab-panel--selected"
        id="panel_r_4_0"
        role="tabpanel"
      >
        <div>
          <pre
            class="shell-box no-highlight"
          >
            <div
              class="shell-box-top"
            />
            <code
              class="shell-box-code"
            >
              <span
                class="install__text__no-select"
              >
                # Install the latest version
              </span>
              <br />
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install-text-command"
              >
                winget install 
              </span>
              EclipseAdoptium.Temurin.
              21
              .JDK
            </code>
          </pre>
          <br />
          <pre
            class="shell-box no-highlight"
          >
            <div
              class="shell-box-top"
            />
            <code
              class="shell-box-code"
            >
              <span
                class="install__text__no-select"
              >
                # Install a different version
              </span>
              <br />
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install-text-command"
              >
                winget install 
              </span>
              EclipseAdoptium.Temurin.11.JDK
            </code>
          </pre>
          <br />
          <pre
            class="shell-box no-highlight"
          >
            <div
              class="shell-box-top"
            />
            <code
              class="shell-box-code"
            >
              <span
                class="install__text__no-select"
              >
                # Upgrade the Winget package
              </span>
              <br />
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install-text-command"
              >
                winget upgrade 
              </span>
              EclipseAdoptium.Temurin.
              21
              .JDK
            </code>
          </pre>
          <br />
          <pre
            class="shell-box no-highlight"
          >
            <div
              class="shell-box-top"
            />
            <code
              class="shell-box-code"
            >
              <span
                class="install__text__no-select"
              >
                # Uninstall the Winget package
              </span>
              <br />
              <span
                class="install__text__no-select"
              >
                $
              </span>
              <span
                class="install-text-command"
              >
                winget uninstall 
              </span>
              EclipseAdoptium.Temurin.
              21
              .JDK
            </code>
          </pre>
          <a
            class="install__docs-button"
            href="https://docs.microsoft.com/en-us/windows/package-manager/winget/"
          >
            Read documentation
          </a>
        </div>
      </div>
      <div
        aria-labelledby="tab_r_4_1"
        class="react-tabs__tab-panel"
        id="panel_r_4_1"
        role="tabpanel"
      />
      <div
        aria-labelledby="tab_r_4_2"
        class="react-tabs__tab-panel"
        id="panel_r_4_2"
        role="tabpanel"
      />
    </div>
  </div>
</div>
`;
